--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node dist/server.js",
     "prisma": "prisma",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "db:migrate": "npx prisma migrate dev --name init"
+    "db:migrate": "npx prisma migrate dev --name init",
+    "lint": "eslint src/**/*.ts --fix",
+    "format": "prettier --write 'src/**/*.ts'"
   },
   "author": "Callum Inglis",
   "license": "ISC",
@@ -22,6 +24,15 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.10",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-promise": "^7.2.1",
+    "prettier": "^3.4.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
