--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@prisma/client": "^6.2.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "prisma": "^6.2.1"
+    "prisma": "^6.2.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
