--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 PORT=3000
 LOG_LEVEL="info"
+ALLOWED_CORS_ORIGINS=http://localhost:3000,https://frontend.example.com
