--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prisma": "prisma",
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:migrate": "npx prisma migrate dev --name init",
+    "db:seed": "ts-node prisma/seed.ts",
     "lint": "eslint src/**/*.ts --fix",
     "format": "prettier --write 'src/**/*.ts'"
   },
@@ -17,12 +18,14 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.2.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "prisma": "^6.2.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.10",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
